correction de specs et jump_to_unreads button

--- a/app/assets/stylesheets/threadheads.css.scss
+++ b/app/assets/stylesheets/threadheads.css.scss
@@ -26,6 +26,7 @@ form.new_threadhead {
 
   .scroll_to {
     float: right;
+    margin-left: 5px;
   }
  }
 
@@ -168,10 +169,10 @@ form.new_threadhead {
   margin-top: 20px;
   height: 210px;
 
-  #homeview_table_1 {
+  #homeview_table_Real_world {
     float: left;
   }
-  #homeview_table_2 {
+  #homeview_table_Crazy_stuff {
     float: right;
   }
 }
